# ecommerce-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
agents/: ecommerce_orchestrator.py  listening_agent.py
notifiers/: telegram_notifier.py
processors/: deduplicator.py  reply_generator.py
sources/: github_issues_source.py  hackernews_source.py  reddit_source.py
state/: seen_posts.json
static/: index.html
