[project]
name = "ecommerce-assistant"
version = "0.1.0"
description = "Insightron Ecommerce Assistant"
requires-python = ">=3.12"
dependencies = [
    "feedparser==6.0.11",
    "requests>=2.31.0",
    "anthropic>=0.25.1",
    "python-telegram-bot>=22.0",
    "python-dotenv>=1.0.1",
    "google-adk>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
